--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^9.0.4",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
